# dioxus-game-of-life

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: actions.yml
src/: animation.rs  bindgen_glue.rs  frames_per_second.rs  game_of_life.rs  lib.rs  main.rs  universe.rs  websys_utils.rs
src/game_of_life/: universe.rs
