[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
# dioxus-desktop = "0.4.3"
wasm-bindgen = "0.2.89"
console_error_panic_hook = "0.1.7"
[dependencies.web-sys]
version = "0.3.66"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Performance",
    "console",
]
