[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
# platform=web dependencies
dioxus-web = { version="0.4.3", optional=true }
wasm-bindgen = { version="0.2.89", optional=true }
# platform=desktop dependencies
dioxus-desktop = { version="0.4.3", optional=true }
rand = { version="0.8.5", optional=true }
[dependencies.web-sys]
version = "0.3.66"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "Performance",
    "console",
]
[features]
desktop = ["dep:dioxus-desktop", "dep:rand"]
web = ["dep:dioxus-web", "dep:wasm-bindgen"]